# Andersen_Task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py  main.py
app/api/v1/routes/: auth.py  task.py  user.py
app/core/: config.py  database.py  di.py  exceptions.py  security.py
app/models/: enum.py  task.py  user.py
app/repository/: __init__.py  base_repository.py  task_repository.py  user_repository.py
app/schemas/: auth.py  pagination.py  task.py  user.py
app/services/: __init__.py  auth_service.py  base_service.py  task_serivce.py  task_service.py  user_service.py
tests/: conftest.py  test_database.py
tests/unit/: test_database.py
tests/unit/endpoints/: test_auth_endpoints.py  test_task_endpoints.py  test_user_endpoints.py
